V1_1_0
------
	1. Allow reading of multiple trees.
	2. Modify mkvariables and mkanalyzer to make use of 1.
V1_0_2
------
	1. Improve Makefile
	2. Allow selection of branches in eventBuffer
	
v1_0_1
------
	1. Fix Makefile
	
v1_0_0
------
	1. First release of treestream as a seperate package from
	TheNtupleMaker