@@ -1,3 +1,7 @@
+V1_1_1
+------
+	1. Fix faulty interaction between chains and friends.
+
 V1_1_0
 ------
 	1. Allow reading of multiple trees.
